--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .second {
-  font-family: "times new roman", curasive;
+  font-family: "times new roman", cursive;
   color: chartreuse;
   font-size: 60px;
 }
